added a folder containing pdf documents with my comments

--- a/report/applications/applications.tex
+++ b/report/applications/applications.tex
@@ -65,7 +65,7 @@ Figure~\ref{fig:speech:clean} shows the features of a clean speech signal, where
 
 
 %%%%%
-\subsection{Filtering of Brain-Machine Interface neural spike data}
+\subsection{Pre-processing of Brain-Machine Interface neural spike data}
 
 We have used Robust PCA on some neural spike data that was collected from a monkey's brain. The Brain-Machine Interface project investigates how neural spike data can be used to interface with machines, with the ultimate goal of establishing some sort of bi-directional link (that is, to be able to control a machine through brain activity and, conversely, to ``feel'' feedback from measurements obtained by the machine). 
 
