--- a/report/report.tex
+++ b/report/report.tex
@@ -77,7 +77,7 @@ These conditions require the singular vectors to be ``spread'' enough with respe
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Support of the sparse component $S_0$}
-The cardinality of the support of $S_0$ is denoted $m$. Guaranteeing exact recovery requires $m$ to be small enough, in a sense that will be defined in the next section. Proving exact recovery will rely on a probabilistic argument on the distribution of sparse matrices $S_0$ on the set of matrices $\{ S \in \Rbb^{n_1 \times n_2} | \text{card}(\text{Supp}S) = m \}$assuming a uniform sampling model. The proof of the main result will use a different sampling model, and prove equivalence with the uniform model.
+The cardinality of the support of $S_0$ is denoted $m$. Guaranteeing exact recovery requires $m$ to be small enough, in a sense that will be defined in the next section. Proving exact recovery will rely on a probabilistic argument on the distribution of sparse matrices $S_0$ on the set of matrices $\{ S \in \Rbb^{n_1 \times n_2} | \text{card}(\text{Supp}(S)) = m \}$ assuming a uniform sampling model. The proof of the main result will use a different sampling model, and prove equivalence with the uniform model.
 
 
 %============================================================================================
@@ -96,9 +96,11 @@ The cardinality of the support of $S_0$ is denoted $m$. Guaranteeing exact recov
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Exact Matrix completion}
-Robust PCA is an extension of the exact matrix completion problem introduced in \cite{Candes:2009uq}, where one seeks to recover a low-rank matrix $L_0$ from a small fraction of its entries. More precisely, assume one is given $\{(L_0)_{ij}, (i,j)\in \Omega\}$ where $\Omega$ is a subset of $[n]\times [n]$.
-
-Problem to solve
+Robust PCA is an extension of the exact matrix completion problem introduced in \cite{Candes:2009uq}, where one seeks to recover a low-rank matrix $L_0$ from a small fraction of its entries. More precisely, assume one is given $\{(L_0)_{ij}, (i,j)\in \Omega\}$ where $\Omega$ is a subset of $[n]\times [n]$. The observed matrix in this case is 
+\[
+M = P_\Omega L_0
+\]
+where $P_\Omega$ denotes the sampling operator, i.e. the orthogonal projection on the subspace of matrices supported on $\Omega$. One seeks to solve the problem
 
 \begin{equation}
 \begin{aligned}
@@ -108,39 +110,69 @@ Problem to solve
 \end{equation}
 
 
-A heuristic is to minimize the nuclear norm of $L$
+A heuristic is to minimize the nuclear norm of $L$, $\|L\|_* = \|\sigma(L)\|_1$ which encourages sparsity of the vector of singular components of $L$, and can thus be considered an approximation of the rank operator, similarly to the $\ell_1$-norm that can be considered an approximation of the $\ell_0$ count operator.
+
+\begin{equation}
+\begin{aligned}
+&\text{minimize} && \|L\|_* \\
+&\text{subject to} && P_\Omega L = P_\Omega L_0
+\end{aligned}
+\end{equation}
+
 
 %-------------------------------------------------------------------------
 \subsubsection{Incoherence}
 
-Singular vectors have to be sufficiently spread
+In order to guarantee recovery with high probability, an incoherence condition is introduced, similar to the one in the Robust PCA framework, though slightly different. First consider an orthogonal matrix $U = [u_1, \dots, u_n]$, and define its coherence of $\mu(U)$ with respect to the canonical basis to be
 
 \begin{equation}
 \mu(U) = \frac{n}{r} \max_i \|P_U e_i\|_2^2 = \frac{n}{r} \max_i \left[ \sum_{k=1}^r u_{ki}^2 \right]
 \label{emc_incoherence}
 \end{equation}
 
-Assumptions:
+$\mu(U)$ is a measure of spread of the vectors $u_1, \dots, u_n$ with respect to the canonical basis. One seeks matrices with low coherence, since intuitively, those matrices will have low probability to be in the null space of the sampling operator $P_\Omega$.
+%------------------------------------------------------------------------------
+\subsubsection{Main result}
+\begin{theorem}
+\label{thm:exact_matrix_recovery}
+Let the SVD of original matrix $L_0$ be given by $L_0 = U \Sigma V^T$, and assume that the following conditions hold:
 \begin{itemize}
 \item $\max \{\mu(U), \mu(V)\} \leq \mu_0$
-\item $\left( \sum_k u_kv_k^*\right)_{ij} \leq \mu_1 \sqrt{\frac{r}{n_1 n_2}}$ (true for $\mu_1 = \mu_0\sqrt{r}$)
-\item $m \geq c \max \{ \mu_1^*, \sqrt{\mu_0}\mu_1, \mu_0 n^{1/4}\}n r \beta \log n$
+\item $\left( \sum_k u_kv_k^T\right)_{ij} \leq \mu_1 \sqrt{\frac{r}{n_1 n_2}}$ (true for $\mu_1 = \mu_0\sqrt{r}$)
+\item $m \geq c \max \{ \mu_1^2, \sqrt{\mu_0}\mu_1, \mu_0 n^{1/4}\}n r \beta \log n$
 \end{itemize}
+Then recovery is exact with high probability (at least $1-\frac{c}{n\beta}$)
+\end{theorem}
 
-Under these assumptions, recovery is exact with high probability (at least $1-\frac{c}{n\beta}$)
 
-Incoherent matrices:
+The authors also give a list of models that can be used to generate incoherent matrices. Let the SVD of $L_0$ be given by $L_0 = \sum_k \sigma_k u_k v_k^*$. Then $L_0$ is incoherent with high probability if it is sampled from:
 \begin{itemize}
-\item sampled from the incoherent basis model
-\item sampled from the random orthogonal model: if $M = \sum_k \sigma_k u_k v_k^*$, then $\{u_1, \dots, u_r\}$ and $\{v_1, \dots, v_r\}$ are assumed to be selected at random.
+\item The incoherent basis model: $U$ and $V$ satisfy the size property
+\[
+\begin{aligned}
+\|U\|_\infty \leq \sqrt{\mu_B/n} && \|V\|_\infty \leq \sqrt{\mu_B/n}
+\end{aligned}
+\]
+for some numerical constant $\mu_B$. Observe that under these conditions, one can bound the coherence $\max (\mu(U), \mu(V)) \leq \mu_B$, and it can be shown that the second condition of Theorem~\ref{thm:exact_matrix_recovery} holds for $\mu_1 = O(\sqrt{\log n})$.
 
+\item The random orthogonal model: if , then $\{u_1, \dots, u_r\}$ and $\{v_1, \dots, v_r\}$ are assumed to be selected at random.
 \end{itemize}
 
 %-------------------------------------------------------------------------
-\subsubsection{Main result}
+\subsubsection{SDP formulation}
 
-
-
+Observe that the problem is equivalent to the SDP
+\begin{equation}
+\begin{aligned}
+&\text{minimize}_{L, W_1, W_2} && tr(W_1) + tr(W_2) \\
+&\text{subject to} && P_\Omega L = P_\Omega L_0\\
+&&& \left[ \begin{array}{cc}
+W_1 & L \\
+L^T & W_2
+\end{array} \right] \succeq 0
+\end{aligned}
+\end{equation}
+%TODO: show equivalence
 
 %-------------------------------------------------------------------------
 \subsubsection{Comparing results to Robust PCA}
@@ -150,10 +182,15 @@ Note that the matrix $L_0$ can be recovered by Principal Component Pursuit, solv
 \begin{equation}
 \begin{aligned}
 &\text{minimize} && \|L\|_* + \lambda \|S\|_1\\
-&\text{subject to} && P_\Omega (L+S) = P_\Omega L_0
+&\text{subject to} && P_\Omega (L+S) = M
 \end{aligned}
 \end{equation}
+where now the observed matrix $M$ is assumed to be given by
+\[
+M = P_\Omega (L_0 + S_0) = P_\Omega (L_0) + S_0'
+\]
 
+Here the original data matrix $L_0$ is assumed to be corrupted with the noise matrix $S_0$ in addition to being under-sampled. The exact matrix completion problem however, assumes that the observed data is perfect $S_0 = 0$. Under the assumptions of Theorem~\ref{thm:pcp}, recovery is exact with high probability, in particular for $S_0 = 0$ (support of the sparse matrix has cardinality $0$).
 
 %TODO: numerical simulations
 
