--- a/report/algorithms/algorithms.tex
+++ b/report/algorithms/algorithms.tex
@@ -1,3 +1,5 @@
+% !TEX root = ../report/report.tex
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % EE227A Project: algorithms.tex
 % Created by: Maximilian Balandat
@@ -5,14 +7,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Use our own document class
-\documentclass{../../common/projectreport}
+%\documentclass{../../common/projectreport}
 
 % Input some of my LaTeX macros - Max
-\input{../../common/defs.tex}
+%\input{../../common/defs.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{document}
+%\begin{document}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -842,10 +844,10 @@ The authors of~\cite{Aybat:2011vn} also propose a first-order algorithm that wor
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\bibliographystyle{abbrv}
-\bibliography{../../common/RobustPCA}
+%\bibliographystyle{abbrv}
+%\bibliography{../../common/RobustPCA}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\end{document}  
+%\end{document}  
 
