--- a/common/RobustPCA.bib
+++ b/common/RobustPCA.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Maximilian Balandat at 2012-04-19 23:43:04 -0700 
+%% Created for Maximilian Balandat at 2012-04-29 16:33:43 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hotelling:1933fk,
+	Author = {Hotelling, H.},
+	Date-Added = {2012-04-29 23:31:27 +0000},
+	Date-Modified = {2012-04-29 23:31:50 +0000},
+	Journal = {J. Educ. Psych.},
+	Title = {{Analysis of a complex of statistical variables into principal components}},
+	Volume = {24},
+	Year = {1933}}
 
 @article{Tao:2011vn,
 	Author = {Tao, Min and Yuan, Xiaoming},
