Added general introduction (still WIP)

--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -11,8 +11,7 @@
 \maketitle
 
 %============================================================================================
-\section*{Introduction}
-%TODO: general introduction goes here
+\input{introduction.tex}
 
 
 %============================================================================================
