split the report.tex and reorganized things

--- a/report/report/generalization.tex
+++ b/report/report/generalization.tex
@@ -1,5 +1,6 @@
 % !TEX root = report.tex
 %============================================================================================
+\newpage
 \section{Robust PCA with known rank: a block coordinate descent approach}
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -324,4 +325,10 @@ $pq^{T}$. The result is as follows.
 
 
 %TODO: add file to the figures folder
-%\includegraphics[width=8cm]{\string"C:/Users/kk/Desktop/EE227A/project/matlab experiments/compare\string".jpg}
+
+\begin{figure}
+\label{fig:comparison}
+\centering
+\includegraphics[width=16cm]{../figures/compare.jpg}
+\end{figure}
+
