--- a/report/report/theory_proofs.tex
+++ b/report/report/theory_proofs.tex
@@ -1,4 +1,5 @@
-
+% !TEX root = report.tex
+\newpage
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Proof of the Lemma about golfing scheme and dual certificate }
 Golfing scheme:
